  'distance' parameter.
- Response list for refining equipments now displays correct item names
- shop.txt parser will complain if you try to vend more than 30,000 of an
  item. (Usually happens if you got price and quantity mixed up, which
  is bad for you since you'd be selling items way cheap.)
- Support for new Episode 10.2 skills

New config options:
- autoMoveOnDeath set:
	autoMoveOnDeath <0/1>
	autoMoveOnDeath_x <INT>
	autoMoveOnDeath_y <INT>
	autoMoveOnDeath_map <MAP>
- serverEncoding
  Specifies the server's character encoding (language). Should be one of:
     Western
     Tagalog
     Chinese
     Korean
     Russian
     Cyrillic
     Japanese
     Thai
- New checkSelfCondition _whenEquipped <item>. True iff the named item
  is equipped.
- debugPacket_received 3 will print what openkore interpreted each parameter
  in the packet as.
- XKore 2: (manual at http://openkore.sourceforge.net/manual/xkore2.php )
	XKore_ID
	XKore_publicIp
	XKore_listenIp
	XKore_listenPort
- removeActorWithDistance
- route_randomWalk_inTown
- teleportAuto_useChatCommand <command>
  Use a specified chat command for random teleport.
- saveMap_warpChatCommand <command>
  Use a specified chat command for respawning or warping to saveMap.
- statsAdd_over_99: set this option to make Kore lift the restriction on adding
  stat points over 99
- _whenNotEquipped checkSelfCondition, opposite of _whenEquipped
  - gameGuard (flag)
  Set this option to 1 if you play inRO or pRO Sakray.
  Set this option to 2 if you play bRO.

New commands:
- cart release: remove cart status
- falcon [release]: Display or remove falcon status
- pecopeco [release]: Display or remove pecopeco status
- ai manual: Pause automated botting and allow manual control
- ai auto: Same as 'ai on'

Internal:
- Implemented the beginning of a localization framework.
- Actor::get($ID) now returns $players{$ID} instead of $monsters{$ID}
  when both exist (which shouldn't happen, but this is a workaround for